--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,9 +8,10 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
 
 # flyway settings
   flyway:
     enabled: true
+    baseline-on-migrate: true
     locations: classpath:db/migration
