--- a/build.gradle
+++ b/build.gradle
@@ -64,3 +64,30 @@ tasks.register('integrationTest', Test) {
     classpath = sourceSets.integrationTest.runtimeClasspath
     shouldRunAfter(tasks.test)
 }
+
+// Checkstyle Configuration
+checkstyle {
+    toolVersion = "10.12.0"
+    configFile = file("config/checkstyle/checkstyle.xml")
+    // Build fails on violations
+    ignoreFailures = false
+}
+
+// Checkstyle for integrationTest source set
+tasks.register('checkstyleIntegration', Checkstyle) {
+    description = 'Runs Checkstyle on integration tests.'
+    group = 'verification'
+    source = sourceSets.integrationTest.allJava
+    classpath = sourceSets.integrationTest.compileClasspath
+    configFile = file("config/checkstyle/checkstyle.xml")
+    ignoreFailures = false
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+// Ensure check task runs all Checkstyle tasks
+tasks.check {
+    dependsOn 'checkstyleMain', 'checkstyleTest', 'checkstyleIntegration'
+}
