--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,8 +9,9 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: validate
+    show-sql: true
 
-# flyway settings
+  # flyway settings
   flyway:
     enabled: true
     baseline-on-migrate: true
