--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,12 @@ spring:
     user: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     locations: classpath:db/migration
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
