--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation("org.dbunit:dbunit:2.7.3")
     testImplementation("com.github.database-rider:rider-spring:1.41.0")
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
 }
 
 tasks.named('test') {
