add prometheus and grafana make them run as containers by docker compose

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     testImplementation("org.dbunit:dbunit:2.7.3")
     testImplementation("com.github.database-rider:rider-spring:1.41.0")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
