--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -71,18 +71,19 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/internship-hr-management-api:${{ env.DT }}
+          tags: ghcr.io/${{ github.repository }}/internship-hr-management-api:${{ env.DT }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Docker image to Docker Hub
+      - name: Push Docker image to GHCR
         uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/internship-hr-management-api:${{ env.DT }}
+          tags: ghcr.io/${{ github.repository }}/internship-hr-management-api:${{ env.DT }}
