--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -71,7 +71,7 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: false
-          tags: ghcr.io/${{ github.repository }}/internship-hr-management-api:${{ env.DT }}
+          tags: ghcr.io/internship-hr-management-api:${{ env.DT }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -86,4 +86,4 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/internship-hr-management-api:${{ env.DT }}
+          tags: ghcr.io/internship-hr-management-api:${{ env.DT }}
