--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,8 +55,8 @@ jobs:
         with:
           name: test-reports
           path: |
-            **/build/reports/tests/test
-            **/build/reports/tests/integrationTest
+            build/reports/tests/test
+            build/reports/tests/integrationTest
 
       - name: Build the application
         run: ./gradlew clean build --info
