--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,13 +5,10 @@ on:
     branches:
       - '**'
   pull_request:
-    types:
-      - opened
-      - closed
 
 jobs:
   build-deploy:
-    name: Build, Test, Deploy Spring Boot App
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
@@ -65,25 +62,59 @@ jobs:
         id: datetime
         run: echo "DT=$(TZ='Africa/Cairo' date +'%Y-%m-%d_%I-%M-%S_%p')" >> $GITHUB_ENV
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: false
-          tags: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.DT }}
-
-      - name: Log in to Docker Hub
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_IMAGE }}
 
-      - name: Push Docker image to GHCR
+      - name: Build & Push Docker image (datetime tag)
         uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.DT }}
+
+
+  docker-release-main:
+    name: Build & Push Docker Image (Main Merge)
+    runs-on: ubuntu-latest
+    needs: build-deploy # don't start this job until the build-deploy job has finished successfully
+    if: github.ref_name == 'main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build the application
+        run: ./gradlew clean build --info
+
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_IMAGE }}
+
+      - name: Set short SHA
+        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      - name: Build & Push Docker image (commit SHA)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:sha-${{ env.SHORT_SHA }}
