--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -82,14 +82,16 @@ jobs:
 
 
   docker-release-main:
-    name: Build & Push Docker Image (Main Merge)
+    name: Semantic Release & Push Docker Image (Main Merge)
     runs-on: ubuntu-latest
-    needs: build-deploy # don't start this job until the build-deploy job has finished successfully
+    needs: build-deploy
     if: github.ref_name == 'main'
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -111,13 +113,39 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_IMAGE }}
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install semantic-release
+        run: |
+          npm install -g semantic-release \
+            @semantic-release/github \
+            @semantic-release/commit-analyzer \
+            @semantic-release/release-notes-generator \
+            @semantic-release/changelog \
+            @semantic-release/git
+
+      - name: Run semantic release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: semantic-release
+
+      - name: Get released version
+        run: |
+          VERSION=$(git describe --tags --abbrev=0 | sed 's/v//')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Set short SHA
         run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-      - name: Build & Push Docker image (commit SHA)
+      - name: Build & Push Docker image (semantic version)
         uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:sha-${{ env.SHORT_SHA }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
+            ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}-sha-${{ env.SHORT_SHA }}
