--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,5 +1,11 @@
 name: Build & Test & Deploy Spring Boot App
 
+# Grant the workflow explicit permissions required by semantic-release and GHCR pushes
+permissions:
+  contents: write
+  packages: write
+  actions: read
+
 on:
   push:
     branches:
@@ -17,6 +23,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -92,6 +101,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -128,6 +138,8 @@ jobs:
             @semantic-release/git
 
       - name: Run semantic release
+        # semantic-release will use the GITHUB_TOKEN provided by Actions.
+        # Ensure permissions above are set to allow pushes/tags/releases.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: semantic-release
