--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -161,3 +161,16 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
             ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}-sha-${{ env.SHORT_SHA }}
+
+      - name: Run Trivy vulnerability scan (SARIF)
+        uses: aquasecurity/trivy-action@0.24.0
+        with:
+          image-ref: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
+          format: sarif
+          output: trivy-results.sarif
+          severity: HIGH,CRITICAL
+
+      - name: Upload Trivy scan results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-results.sarif
