--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -163,15 +163,9 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
             ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}-sha-${{ env.SHORT_SHA }}
 
-      - name: Run Trivy vulnerability scan (SARIF)
+      - name: Run Trivy vulnerability scan (table output)
         uses: aquasecurity/trivy-action@0.24.0
         with:
           image-ref: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
-          format: sarif
-          output: trivy-results.sarif
+          format: table
           severity: HIGH,CRITICAL
-
-      - name: Upload Trivy scan results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-results.sarif
