--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -95,7 +95,7 @@ jobs:
     name: Semantic Release & Push Docker Image (Main Merge)
     runs-on: ubuntu-latest
     needs: build-deploy
-    #if: github.ref_name == 'main'
+    if: github.ref_name == 'main'
 
     steps:
       - name: Checkout repository
