--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -169,3 +169,4 @@ jobs:
           image-ref: ghcr.io/${{ github.repository_owner }}/internship-hr-management-api:${{ env.VERSION }}
           format: table
           severity: HIGH,CRITICAL
+          exit-code: 1
