--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,11 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
 
+      - name: gitleaks
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
